- [PATCH] Support SSO token api (#1543)
- [MINOR] Add flighting parameters to commmandParameters (#1562)
- [MINOR] Hook telemetry to LocalAuthenticationResult and BaseException (#1636)
- [PATCH] Fix accidental code change that disabled PoP for auth code grant flow (#1661)
- [PATCH] Synchronize updating refresh token in cache (saving new and removing old) to avoid race condition (#1659)

Version 3.6.3
----------
- [PATCH] Add helper method to remove the metadataCache entry (#1593)

Version 3.6.2
----------
- [PATCH] Handle the scenario where broker activity is killed wrongly. (#1569)
- [PATCH] Fixing Redirect Uri for Authenticator App, when migrating to MSAL (#1567)

Version 3.6.1
----------
- [PATCH] Additional API for method to clear the singleton shared preferences cache
- [PATCH] Log and swallow failures from CustomTabsService unbind (#1549)
- [PATCH] Fix correlation id error
- [PATCH] Fix crash related to fall back to webview when no browser present

Version 3.6.0
----------
- [PATCH] Allow retry generation of Device PoP key without attempting attestation cert gen (#1456, #1507)
- [MAJOR/MINOR (Rebrand)] Please note! This is technically an API breaking change that we have elected to voluntarily ship as "MINOR" due to lack of usage. Removes support for SHA-384/512, MD5 w. RSA due to incompatibilities on certain devices (#1489, #1508)
- [MINOR] Increase visibility of internal SSOStateSerializer for OneAuth usage (integration steps available at aka.ms/AAd2vt8) (#1448, #1509)
- [MINOR] Add a method to allow for the setting of Fragment initial state (#1506, #1512)
- [MINOR] Adds ContentProvider Constants used for Intune ContentProvider call (#1513, #1657)
- [PATCH] Clear asymmetric pop key on KeyPermanentlyInvalidatedException if occurs during signing (#1505, #1517)
- [MINOR] Adds Intune Application specific ContentProvider Constants (#1521, #1513)

Version 3.5.0
----------
- [MINOR] Code changes for new OneAuth cache key migration API (#1464)