@@ -66,6 +66,7 @@ V.Next
 - [MINOR] Hook telemetry to LocalAuthenticationResult and BaseException (#1636)
 - [PATCH] Fix accidental code change that disabled PoP for auth code grant flow (#1661)
 - [PATCH] Synchronize updating refresh token in cache (saving new and removing old) to avoid race condition (#1659)
+- [PATCH] Make unknown RawAuthorizationResult codes UNKNOWN, not null (#1614)
 
 Version 3.6.3
 ----------
